--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@ nav .navigation ul li a {
     transition: 0.3s ease;
 }
 
+nav .navigation ul li a.active,
 nav .navigation ul li a:hover {
     color: #FDC93B;
 }
@@ -437,9 +438,93 @@ footer .copyright .pro-links i:hover{
     color: #2C2C2C;
 }
 
+/* About Page */
+
+#about-home {
+    background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)), url("images/back1.jpg");
+    width: 100%;
+    height: 60vh;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-top: 40px;
+}
+
+#about-home h2{
+    color: white;
+    font-size: 2.2rem;
+    letter-spacing: 1px;
+}
+
+#about-container{
+    display: flex;
+    align-items: center;
+    padding: 8vw 8vw 2vw 8vw;
+}
+
+#about-container .about-img{
+    width: 60%;
+    padding-right: 60px;
+}
+
+#about-container .about-img img{
+    width: 100%;
+}
+
+#about-container .about-text{
+    width: 40%;
+
+}
+
+#about-container .about-text h2{
+    color: #29303B;
+    padding-bottom: 15px;
+}
+
+#about-container .about-text p{
+    color: #686f7a;
+    font-weight: 300;
+}
+
+#about-container .about-text .about-fe{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-top: 30px;
+}
+
+#about-container .about-text .about-fe img{
+    width: 50px;
+    background-size: cover;
+    background-position: center;
+    margin-right: 20px;
+}
+
+#about-container .about-text .about-fe .fe-text{
+    width: 90%;
+}
+
+#about-container .about-text .about-fe .fe-text h5{
+    font-size: 16px;
+    color: #29303B;
+}
+
+
+
+
+
+
+
 /* Now Responsive work! */
 
 @media (max-width:769px) {
+
+    /* Landing Page */
+
     nav {
         padding: 15px 20px;
     }
@@ -507,6 +592,17 @@ footer .copyright .pro-links i:hover{
     footer .copyright .pro-links{
         margin-top: 15px;
     }
+
+    /* About Page */
+
+    #about-container {
+        padding: 8vw 4vw 2vw 4vw;
+    }
+
+    #about-container .about-img{
+        padding: 30px;
+    }
+
 }
 
 @media (max-width:475px) {
@@ -527,6 +623,20 @@ footer .copyright .pro-links i:hover{
     }
     footer input {
         margin-bottom: 18px
+    }
+
+    /* About Page */
+
+    #about-container{
+        flex-direction: column-reverse;
+    }
+    #about-container .about-img{
+        width: 100%;
+        padding-right: 0px;
+    }
+    #about-container .about-text{
+        width: 100%;
+        padding-bottom: 20px;
     }
 }
 
