Photo and page added

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 /*  Global Tags */
 
 h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: 700;
     color: rgb(35, 35, 85);
 }
@@ -48,17 +48,17 @@ nav img {
     cursor: pointer;
 }
 
-nav .navigation{
+nav .navigation {
     display: flex;
 }
 
-#menu-btn{
-   width: 30px;
-   height: 30px;
-   display: none; 
+#menu-btn {
+    width: 30px;
+    height: 30px;
+    display: none;
 }
 
-#menu-close{
+#menu-close {
     display: none;
 }
 
@@ -89,7 +89,7 @@ nav .navigation ul li a:hover {
 /* Home */
 
 #home {
-    background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)), url("images/back.jpg");
+    background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)), url("images/Victoria.jpg");
     width: 100%;
     height: 100vh;
     background-size: cover;
@@ -172,7 +172,7 @@ nav .navigation ul li a:hover {
 /* Packages */
 
 #course {
-    padding: 8vw 8vw 8vw 8vw;
+    padding: 4vw 8vw 4vw 8vw;
     text-align: center;
 }
 
@@ -224,7 +224,7 @@ nav .navigation ul li a:hover {
 #registration {
     padding: 6vw 8vw 6vw 8vw;
     /* background-image: url("images/signup.jpg"); */
-    background-image: linear-gradient(rgba(99, 112, 168, 0.5), rgba(81, 91, 233, 0.5)), url("images/signup.jpg");
+    background-image: linear-gradient(rgba(99, 112, 168, 0.5), rgba(81, 91, 233, 0.5)), url("images/purulia1.webp");
     width: 100%;
     height: 100%;
     background-size: cover;
@@ -234,19 +234,20 @@ nav .navigation ul li a:hover {
     align-items: center;
 }
 
-#registration .reminder{
+#registration .reminder {
     color: white;
 }
 
-#registration .reminder h1{
+#registration .reminder h1 {
     color: white;
 }
 
-#registration .reminder .time{
+#registration .reminder .time {
     display: flex;
     margin-top: 40px;
 }
-#registration .reminder .time .date{
+
+#registration .reminder .time .date {
     text-align: center;
     padding: 13px 33px;
     background: rgba(255, 255, 255, 0.25);
@@ -259,7 +260,7 @@ nav .navigation ul li a:hover {
     font-weight: 600;
 }
 
-#registration .form{
+#registration .form {
     background: white;
     border-radius: 8px;
     display: flex;
@@ -268,20 +269,20 @@ nav .navigation ul li a:hover {
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
 }
 
-#registration .form input{
+#registration .form input {
     margin: 15px 0;
     padding: 15px 10px;
     border: 1px solid rgb(84, 40, 241);
     outline: none;
 }
 
-#registration .form input::placeholder{
+#registration .form input::placeholder {
     color: #413c3c;
     font-weight: 500;
     font-size: 0.9rem;
 }
 
-#registration .form .btn{
+#registration .form .btn {
     margin-top: 20px;
 }
 
@@ -305,35 +306,35 @@ nav .navigation ul li a:hover {
 
 /*   Experts */
 
-#experts{
-    padding: 8vw 8vw 8vw 8vw;
+#experts {
+    padding: 4vw 8vw 4vw 8vw;
     text-align: center;
 }
 
-#experts .expert-box{
+#experts .expert-box {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 1rem;
     margin-top: 50px;
 }
 
-#experts .expert-box .profile{
+#experts .expert-box .profile {
     background: #fafaf1;
     padding: 30px 10px;
 }
 
-.pro-links{
+.pro-links {
     margin-top: 10px;
 }
 
-.pro-links i{
+.pro-links i {
     padding: 10px 13px;
     border: 1px solid rgb(21, 21, 100);
     cursor: pointer;
     transition: 00.3s ease;
 }
 
-.pro-links i:hover{
+.pro-links i:hover {
     background: rgb(21, 21, 100);
     color: white;
     border: 1px solid rgb(21, 21, 100);
@@ -342,7 +343,7 @@ nav .navigation ul li a:hover {
 
 /* Footer */
 
-footer{
+footer {
     padding: 8vw;
     background-color: #101c32;
     display: flex;
@@ -351,17 +352,17 @@ footer{
     flex-wrap: wrap;
 }
 
-footer .footer-col{
+footer .footer-col {
     padding-bottom: 40px;
 }
 
-footer h3{
+footer h3 {
     color: rgb(241, 240, 245);
     font-weight: 600;
     padding-bottom: 20px;
 }
 
-footer li{
+footer li {
     list-style: none;
     color: #7b838a;
     padding: 10px 0;
@@ -370,19 +371,19 @@ footer li{
     transition: 0.3s ease;
 }
 
-footer li:hover{
-    color:rgb(241, 240, 245);
+footer li:hover {
+    color: rgb(241, 240, 245);
 }
 
-footer p{
+footer p {
     color: #7b838a;
 }
 
-footer .subscribe{
+footer .subscribe {
     margin-top: 20px;
 }
 
-footer input{
+footer input {
     width: 220px;
     padding: 15px 12px;
     background: #334f6c;
@@ -391,12 +392,12 @@ footer input{
     color: white;
 }
 
-footer .footer-col a{
+footer .footer-col a {
     text-decoration: none;
     font-size: 0.9rem;
     padding: 12px 15px;
     background-color: white;
-    font-weight: 600;   
+    font-weight: 600;
 }
 
 footer .footer-col a.yellow {
@@ -411,7 +412,7 @@ footer .footer-col a.yellow:hover {
 
 }
 
-footer .copyright{
+footer .copyright {
     margin-top: 20px;
     display: flex;
     justify-content: space-between;
@@ -420,28 +421,30 @@ footer .copyright{
     flex-wrap: wrap;
 }
 
-footer .copyright p{
+footer .copyright p {
     color: white;
 }
 
-footer .copyright .pro-links{
+footer .copyright .pro-links {
     margin-top: 0px;
 }
 
-footer .copyright .pro-links i{
+footer .copyright .pro-links i {
     background-color: #5f7185;
     color: white;
 }
 
-footer .copyright .pro-links i:hover{
+footer .copyright .pro-links i:hover {
     background-color: #FDC93B;
     color: #2C2C2C;
 }
 
 /* About Page */
 
+/* home page photo */
+
 #about-home {
-    background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)), url("images/back1.jpg");
+    background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)), url("images/bolpur.jpg");
     width: 100%;
     height: 60vh;
     background-size: cover;
@@ -454,72 +457,481 @@ footer .copyright .pro-links i:hover{
     padding-top: 40px;
 }
 
-#about-home h2{
+#about-home h2 {
     color: white;
     font-size: 2.2rem;
     letter-spacing: 1px;
 }
 
-#about-container{
+/* Contact Page photo */
+
+#home-contact {
+    background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)), url("images/digha.jpg");
+    width: 100%;
+    height: 70vh;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-top: 40px;
+}
+
+#home-contact h2 {
+    color: white;
+    font-size: 2.2rem;
+    letter-spacing: 1px;
+}
+
+/* Hotel page photo */
+
+#home-hotel {
+    background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)), url("images/howrah_bridge.jpg");
+    width: 100%;
+    height: 70vh;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-top: 40px;
+}
+
+#home-hotel h2 {
+    color: white;
+    font-size: 2.2rem;
+    letter-spacing: 1px;
+}
+
+/* Package page photo */
+
+#home-pack {
+    background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)), url("images/puru.jpg");
+    width: 100%;
+    height: 70vh;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-top: 40px;
+}
+
+#home-pack h2 {
+    color: white;
+    font-size: 2.2rem;
+    letter-spacing: 1px;
+}
+
+
+#about-container {
     display: flex;
     align-items: center;
     padding: 8vw 8vw 2vw 8vw;
 }
 
-#about-container .about-img{
+#about-container .about-img {
     width: 60%;
     padding-right: 60px;
 }
 
-#about-container .about-img img{
+#about-container .about-img img {
     width: 100%;
 }
 
-#about-container .about-text{
+#about-container .about-text {
     width: 40%;
 
 }
 
-#about-container .about-text h2{
+#about-container .about-text h2 {
     color: #29303B;
     padding-bottom: 15px;
 }
 
-#about-container .about-text p{
+#about-container .about-text p {
     color: #686f7a;
     font-weight: 300;
 }
 
-#about-container .about-text .about-fe{
+#about-container .about-text .about-fe {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
     margin-top: 30px;
 }
 
-#about-container .about-text .about-fe img{
+#about-container .about-text .about-fe img {
     width: 50px;
     background-size: cover;
     background-position: center;
     margin-right: 20px;
 }
 
-#about-container .about-text .about-fe .fe-text{
+#about-container .about-text .about-fe .fe-text {
     width: 90%;
 }
 
-#about-container .about-text .about-fe .fe-text h5{
+#about-container .about-text .about-fe .fe-text h5 {
     font-size: 16px;
     color: #29303B;
 }
 
+/* Hotels files */
+
+#blog-container {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 8vw;
+}
+
+#blog-container .blogs {
+    width: 60%;
+}
+
+#blog-container .blogs img {
+    width: 100%;
+    border-radius: 19px;
+}
+
+#blog-container .blogs .post {
+    padding-bottom: 50px;
+}
+
+#blog-container .blogs .post h3 {
+    color: #29303B;
+    padding: 15px 0 10px 0;
+}
+
+#blog-container .blogs .post p {
+    color: #757373;
+    padding-bottom: 20px;
+}
+
+#blog-container .blogs .post a {
+    text-decoration: none;
+    font-size: 0.9rem;
+    padding: 13px 35px;
+    background-color: rgb(21, 21, 100);
+    color: white;
+    border-radius: 5px;
+    font-weight: 600;
+}
+
+#blog-container .cate {
+    width: 30%;
+}
+
+#blog-container .cate h2 {
+    padding-bottom: 7px;
+}
+
+#blog-container .cate a {
+    text-decoration: none;
+    color: #757373;
+    font-weight: 500;
+    line-height: 45px;
+}
+
+/* Full Blog Post */
+
+#blog-container .blogpost {
+    width: 60%;
+    margin: 0 auto;
+}
+
+#blog-container .blogpost p {
+    text-align: justify;
+    padding-bottom: 60px !important;
+}
+
+/* Tour Packages Inner */
+
+#course-inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 8vw;
+}
+
+#course-inner h3 {
+    padding: 35px 0 25px 0;
+    color: #29303B;
+}
+
+#course-inner p {
+    color: #64626e;
+}
+
+#course-inner hr {
+    height: 1px;
+    background: rgba(236, 226, 229, 0.5);
+    margin-top: 40px;
+}
+
+#course-inner .overview {
+    width: 70%;
+}
+
+#course-inner .overview .course-img {
+    width: 100%;
+    height: 60vh;
+    object-fit: cover;
+    border-radius: 20px;
+    margin-bottom: 20px;
+}
+
+#course-inner .overview .course-head {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+#course-inner .overview .course-head .c-name {
+    width: 70%;
+}
+
+#course-inner .overview .course-head .c-name h2 {
+    color: #29303B;
+}
+
+#course-inner .overview .course-head .c-name .star {
+    margin: 6px 0;
+}
+
+#course-inner .overview .course-head .c-name .star i {
+    color: #FDC93B;
+    font-size: 0.9rem;
+}
+
+#course-inner .overview .course-head .c-name p {
+    font-size: 15px;
+}
+
+#course-inner .overview .course-head span {
+    padding: 16px 22px;
+    border-radius: 5px;
+    color: #5838fc;
+    font-size: 24px;
+    font-weight: 700;
+    background-color: rgba(88, 56, 252, 0.1);
+}
+
+#course-inner .learn p {
+    font-size: 15px;
+    padding-bottom: 15px;
+}
+
+#course-inner .learn p i {
+    color: #654ce4;
+    font-weight: 700;
+    margin-right: 20px;
+}
+
+#course-inner .tutor {
+    display: flex;
+}
+
+#course-inner .tutor img {
+    width: 70px;
+    height: 70px;
+    border-radius: 50px;
+    margin-right: 20px;
+}
+
+#course-inner .tutor h5 {
+    font-size: 15px;
+}
+
+#course-inner .enroll {
+    width: 300px;
+    padding: 0 30px 30px 30px;
+    border-radius: 11px;
+    box-shadow: 0px 20px 40px 0 rgba(11, 2, 55, 0.1);
+}
+
+#course-inner .enroll h3 {
+    padding-bottom: 10px;
+}
+
+#course-inner .enroll p {
+    font-size: 15px;
+    color: #64626e;
+    margin: 15px 0;
+}
+
+#course-inner .enroll p i {
+    color: #654ce4;
+    font-weight: 500;
+    margin-right: 18px;
+    width: 16px;
+    height: 16px;
+    line-height: 16px;
+    text-align: center;
+}
+
+#course-inner .enroll .enroll-btn {
+    padding: 25px 0 20px 0;
+    margin: auto;
+    text-align: center;
+}
+
+#course-inner .enroll .enroll-btn a {
+    text-decoration: none;
+    font-size: .8rem;
+    padding: 13px 45px;
+    border-radius: 5px;
+    font-weight: 600;
+    color: white;
+    background-color: rgb(50, 50, 136);
+}
+
+/* Contact Page */
+
+#contact {
+    padding: 8vw;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+#contact .getin {
+    width: 350px;
+}
+
+#contact .getin h2 {
+    color: #2c234d;
+    font-size: 30px;
+    font-weight: 800;
+    line-height: .8;
+    margin-bottom: 16px;
+}
+
+#contact .getin h3 {
+    color: #2c234d;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 26px;
+    margin-bottom: 16px;
+}
+
+#contact .getin p {
+    color: #686875;
+    line-height: 24px;
+    margin-bottom: 33px;
+    padding-bottom: 25px;
+    border-bottom: 1px solid #e5e4ed;
+
+}
+
+#contact .getin .getin-details div {
+    display: flex;
+}
+
+#contact .getin .getin-details div .get {
+    font-size: 16px;
+    line-height: 22px;
+    color: #5838fc;
+    margin-right: 20px;
+}
+
+#contact .getin .getin-details div p {
+    font-size: 14px;
+    border-bottom: none;
+    line-height: 22px;
+    margin-bottom: 15px;
+}
+
+#contact .getin .getin-details .pro-links i {
+    margin-right: 8px;
+}
+
+#contact .form {
+    width: 60%;
+    background: #f7f6fa;
+    padding: 40px;
+    border-radius: 10px;
+}
+
+#contact .form h4 {
+    font-size: 24px;
+    color: #2c234d;
+    line-height: 30px;
+    margin-bottom: 8px;
+}
+
+#contact .form p {
+    color: #686875;
+    line-height: 24px;
+    padding-bottom: 25px;
+}
+
+#contact .form .form-row {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+#contact .form .form-row input {
+    width: 48%;
+    font-size: 14px;
+    font-weight: 400;
+    border-radius: 3px;
+    border: none;
+    background: white;
+    color: #7e7c87;
+    outline: none;
+    padding: 20px 30px;
+    margin-bottom: 20px;
+}
+
+#contact .form .form-col input,
+#contact .form .form-col textarea {
+    width: 100%;
+    font-size: 14px;
+    font-weight: 400;
+    border-radius: 3px;
+    border: none;
+    background: white;
+    color: #7e7c87;
+    outline: none;
+    padding: 20px 30px;
+    margin-bottom: 20px;
+}
+
+#contact .form button {
+    font-size: .9rem;
+    padding: 13px 25px;
+    background: rgb(21, 21, 100);
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    font-weight: 600;
+    cursor: pointer;
+    color: white;
+}
+
+#map {
+    width: 100%;
+    height: 70vh;
+    margin-bottom: 8vh;
+}
+
+#map iframe {
+    width: 100%;
+    height: 100%;
+}
 
 
 
-
-
-
-/* Now Responsive work! */
+/* Now Responsive work!---------------------------------- */
 
 @media (max-width:769px) {
 
@@ -528,24 +940,29 @@ footer .copyright .pro-links i:hover{
     nav {
         padding: 15px 20px;
     }
-    nav img{
+
+    nav img {
         width: 130px;
     }
-    #menu-btn{
+
+    #menu-btn {
         display: initial;
     }
-    #menu-close{
+
+    #menu-close {
         display: initial;
         font-size: 1.6rem;
         color: white;
         padding: 30px 0 20px 20px;
 
     }
-    nav .navigation ul{
+
+    nav .navigation ul {
         position: absolute;
         top: 0;
         right: -220px;
-        width: 220px;;
+        width: 220px;
+        ;
         height: 100vh;
         background: rgba(17, 20, 104, 0.45);
         backdrop-filter: blur(4.5px);
@@ -557,39 +974,48 @@ footer .copyright .pro-links i:hover{
         transition: 0.3s ease;
     }
 
-    nav .navigation ul.active{
+    nav .navigation ul.active {
         right: 0;
     }
-    nav .navigation ul li{
+
+    nav .navigation ul li {
         padding: 20px 0 20px 40px;
         margin-left: 0;
     }
-    nav .navigation ul li a{
+
+    nav .navigation ul li a {
         color: white;
     }
-    #home{
+
+    #home {
         padding-top: 0px;
     }
-    #home p{
+
+    #home p {
         width: 90%;
     }
-    #course{
+
+    #course {
         padding: 8vw 4vw 0 4vw;
     }
-    #registration{
+
+    #registration {
         margin-top: 8vw;
         padding: 6vw 4vw 6vw 4vw;
     }
-    #registration .reminder .time{
+
+    #registration .reminder .time {
         display: flex;
         flex-wrap: wrap;
         margin-top: 40px;
     }
-    #experts{
+
+    #experts {
         padding: 8vw 8vw 4vw 8vw;
         text-align: center;
     }
-    footer .copyright .pro-links{
+
+    footer .copyright .pro-links {
         margin-top: 15px;
     }
 
@@ -599,21 +1025,77 @@ footer .copyright .pro-links i:hover{
         padding: 8vw 4vw 2vw 4vw;
     }
 
-    #about-container .about-img{
+    #about-container .about-img {
         padding: 30px;
     }
+
+    /* Hotels */
+
+    #blog-container {
+        padding: 8vw 4vw;
+    }
+
+    /* Hotel Page */
+
+    #blog-container .blogpost {
+        width: 100%;
+        margin-top: 30px;
+    }
+
+    #blog-container .blogpost img {
+        width: 100%;
+        height: 50vh;
+        object-fit: cover;
+    }
+
+    /* Tour Inner */
+
+    #course-inner {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        padding: 6vw 4vw;
+    }
+
+    #course-inner .overview {
+        width: 100%;
+    }
+
+    #course-inner .overview .course-img {
+        width: 100%;
+        height: 100%;
+    }
+
+    #course-inner .enroll {
+        margin-top: 15px;
+    }
+
+    /* contact us */
+
+    #contact {
+        padding: 8vw 4vw;
+    }
+
+    #contact .getin {
+        width: 250px;
+    }
+
+
 
 }
 
 @media (max-width:475px) {
-    #registration{
+
+    #registration {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         text-align: center;
     }
-    #registration .reminder .time{
+
+    #registration .reminder .time {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
@@ -621,22 +1103,79 @@ footer .copyright .pro-links i:hover{
         margin-top: 20px;
         margin-bottom: 20px;
     }
+
     footer input {
         margin-bottom: 18px
     }
 
     /* About Page */
 
-    #about-container{
+    #about-container {
         flex-direction: column-reverse;
     }
-    #about-container .about-img{
+
+    #about-container .about-img {
         width: 100%;
         padding-right: 0px;
     }
-    #about-container .about-text{
+
+    #about-container .about-text {
         width: 100%;
         padding-bottom: 20px;
     }
-}
 
+    /* Hotels */
+
+    #blog-container {
+        flex-direction: column;
+    }
+
+    #blog-container .blogs {
+        width: 100%;
+    }
+
+    #blog-container .cate {
+        width: 100%;
+    }
+
+    /* Tour Inner */
+
+    #course-inner .overview .course-head .c-name {
+        width: 50%;
+    }
+
+    #course-inner .overview .course-head .c-name h2 {
+        font-size: 22px;
+    }
+
+    #course-inner .overview .course-head span {
+        font-size: 22px;
+    }
+
+    /* #contact */
+
+    #contact {
+        padding: 8vw 4vw;
+        flex-direction: column;
+        align-content: flex-start;
+        justify-content: flex-start;
+    }
+
+    #contact .getin {
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+    #contact .form {
+        width: 100%;
+        padding: 40px 30px;
+    }
+
+    #contact .form .form-row {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        width: 100%;
+    }
+
+}
